# GravityBoxCuda

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  particles
CPU/: particles
CPU/include/: particle.h  physics.h  renderer.h
CPU/src/: main.cpp  physics.cpp  renderer.cpp
include/: particle.h  physics.cuh  renderer.h
src/: main.cu  physics.cu  renderer.cpp
